syntax = "proto3";

package api.v1;

import "google/type/date.proto";

service API {
    rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
    rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
    rpc ToggleTaskCompleted (ToggleTaskCompletedRequest) returns (ToggleTaskCompletedResponse);
    rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
    rpc GetTasks (GetTasksRequest) returns (stream GetTasksResponse);
}

message CreateTaskRequest {
    string title = 1;
    google.type.Date start_date = 2;
    google.type.Date end_date = 3;
}

message CreateTaskResponse {
    int32 id = 1;
    string title = 2;
    google.type.Date start_date = 3;
    google.type.Date end_date = 4;
}

message UpdateTaskRequest {
    int32 id = 1;
    string title = 2;
    google.type.Date start_date = 3;
    google.type.Date end_date = 4;
}

message UpdateTaskResponse {
    int32 id = 1;
    string title = 2;
    bool is_completed = 3;
    google.type.Date start_date = 4;
    google.type.Date end_date = 5;
}

message ToggleTaskCompletedRequest {
    int32 id = 1;
    bool is_completed = 2;
}

message ToggleTaskCompletedResponse {
    int32 id = 1;
    bool is_completed = 2;
}

message DeleteTaskRequest {
    int32 id = 1;
}

message DeleteTaskResponse {
    int32 id = 1;
}

message GetTasksRequest {
}

message GetTasksResponse {
    int32 id = 1;
    string title = 2;
    bool is_completed = 3;
    google.type.Date start_date = 4;
    google.type.Date end_date = 5;
}